Max width of a floated container with floated children calculated incorrectly https://bugs.webkit.org/show_bug.cgi?id=47975

Source/WebCore:

Accumulate the width of child floats in the correct counter so that it gets reset
as expected when a subsequent sibling decides to clear it.

Reviewed by Levi Weintraub.

Test: fast/block/float/max-width-clear-float-with-overflow-hidden.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computeBlockPreferredLogicalWidths):

LayoutTests:

Reviewed by Levi Weintraub.

* fast/block/float/max-width-clear-float-with-overflow-hidden-expected.html: Added.
* fast/block/float/max-width-clear-float-with-overflow-hidden.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@138899 bbb929c8-8fbe-4397-9dbb-9b2b20218538